Package_Tools/include_C/in_arbeit/fertig/SDL_video.h


typedef struct SDL_Window SDL_Window;
typedef Uint64 SDL_WindowFlags;
#define SDL_WINDOWPOS_UNDEFINED_MASK    0x1FFF0000u
#define SDL_WINDOWPOS_UNDEFINED_DISPLAY(X)  (SDL_WINDOWPOS_UNDEFINED_MASK|(X))
#define SDL_WINDOWPOS_UNDEFINED         SDL_WINDOWPOS_UNDEFINED_DISPLAY(0)
#define SDL_WINDOWPOS_ISUNDEFINED(X)    \
            (((X)&0xFFFF0000) == SDL_WINDOWPOS_UNDEFINED_MASK)
#define SDL_WINDOWPOS_CENTERED_MASK    0x2FFF0000u
#define SDL_WINDOWPOS_CENTERED_DISPLAY(X)  (SDL_WINDOWPOS_CENTERED_MASK|(X))
#define SDL_WINDOWPOS_CENTERED         SDL_WINDOWPOS_CENTERED_DISPLAY(0)
#define SDL_WINDOWPOS_ISCENTERED(X)    \
            (((X)&0xFFFF0000) == SDL_WINDOWPOS_CENTERED_MASK)
typedef enum SDL_FlashOperation
{
    SDL_FLASH_CANCEL,                   
    SDL_FLASH_BRIEFLY,                  
    SDL_FLASH_UNTIL_FOCUSED             
} SDL_FlashOperation;
typedef struct SDL_GLContextState *SDL_GLContext;
typedef void *SDL_EGLDisplay;
typedef void *SDL_EGLConfig;
typedef void *SDL_EGLSurface;
typedef SDL_EGLAttrib *( *SDL_EGLAttribArrayCallback)(void *userdata);
typedef SDL_EGLint *( *SDL_EGLIntArrayCallback)(void *userdata, SDL_EGLDisplay display, SDL_EGLConfig config);
typedef enum SDL_GLattr
{
    SDL_GL_RED_SIZE,                    
    SDL_GL_GREEN_SIZE,                  
    SDL_GL_BLUE_SIZE,                   
    SDL_GL_ALPHA_SIZE,                  
    SDL_GL_BUFFER_SIZE,                 
    SDL_GL_DOUBLEBUFFER,                
    SDL_GL_DEPTH_SIZE,                  
    SDL_GL_STENCIL_SIZE,                
    SDL_GL_ACCUM_RED_SIZE,              
    SDL_GL_ACCUM_GREEN_SIZE,            
    SDL_GL_ACCUM_BLUE_SIZE,             
    SDL_GL_ACCUM_ALPHA_SIZE,            
    SDL_GL_STEREO,                      
    SDL_GL_MULTISAMPLEBUFFERS,          
    SDL_GL_MULTISAMPLESAMPLES,          
    SDL_GL_ACCELERATED_VISUAL,          
    SDL_GL_RETAINED_BACKING,            
    SDL_GL_CONTEXT_MAJOR_VERSION,       
    SDL_GL_CONTEXT_MINOR_VERSION,       
    SDL_GL_CONTEXT_FLAGS,               
    SDL_GL_CONTEXT_PROFILE_MASK,        
    SDL_GL_SHARE_WITH_CURRENT_CONTEXT,  
    SDL_GL_FRAMEBUFFER_SRGB_CAPABLE,    
    SDL_GL_CONTEXT_RELEASE_BEHAVIOR,    
    SDL_GL_CONTEXT_RESET_NOTIFICATION,  
    SDL_GL_CONTEXT_NO_ERROR,
    SDL_GL_FLOATBUFFERS,
    SDL_GL_EGL_PLATFORM
} SDL_GLattr;
#define SDL_PROP_WINDOW_SHAPE_POINTER                               "SDL.window.shape"
#define SDL_PROP_WINDOW_HDR_ENABLED_BOOLEAN                         "SDL.window.HDR_enabled"
#define SDL_PROP_WINDOW_SDR_WHITE_LEVEL_FLOAT                       "SDL.window.SDR_white_level"
#define SDL_PROP_WINDOW_HDR_HEADROOM_FLOAT                          "SDL.window.HDR_headroom"
#define SDL_PROP_WINDOW_ANDROID_WINDOW_POINTER                      "SDL.window.android.window"
#define SDL_PROP_WINDOW_ANDROID_SURFACE_POINTER                     "SDL.window.android.surface"
#define SDL_PROP_WINDOW_UIKIT_WINDOW_POINTER                        "SDL.window.uikit.window"
#define SDL_PROP_WINDOW_UIKIT_METAL_VIEW_TAG_NUMBER                 "SDL.window.uikit.metal_view_tag"
#define SDL_PROP_WINDOW_UIKIT_OPENGL_FRAMEBUFFER_NUMBER             "SDL.window.uikit.opengl.framebuffer"
#define SDL_PROP_WINDOW_UIKIT_OPENGL_RENDERBUFFER_NUMBER            "SDL.window.uikit.opengl.renderbuffer"
#define SDL_PROP_WINDOW_UIKIT_OPENGL_RESOLVE_FRAMEBUFFER_NUMBER     "SDL.window.uikit.opengl.resolve_framebuffer"
#define SDL_PROP_WINDOW_KMSDRM_DEVICE_INDEX_NUMBER                  "SDL.window.kmsdrm.dev_index"
#define SDL_PROP_WINDOW_KMSDRM_DRM_FD_NUMBER                        "SDL.window.kmsdrm.drm_fd"
#define SDL_PROP_WINDOW_KMSDRM_GBM_DEVICE_POINTER                   "SDL.window.kmsdrm.gbm_dev"
#define SDL_PROP_WINDOW_COCOA_WINDOW_POINTER                        "SDL.window.cocoa.window"
#define SDL_PROP_WINDOW_COCOA_METAL_VIEW_TAG_NUMBER                 "SDL.window.cocoa.metal_view_tag"
#define SDL_PROP_WINDOW_VIVANTE_DISPLAY_POINTER                     "SDL.window.vivante.display"
#define SDL_PROP_WINDOW_VIVANTE_WINDOW_POINTER                      "SDL.window.vivante.window"
#define SDL_PROP_WINDOW_VIVANTE_SURFACE_POINTER                     "SDL.window.vivante.surface"
#define SDL_PROP_WINDOW_WIN32_HWND_POINTER                          "SDL.window.win32.hwnd"
#define SDL_PROP_WINDOW_WIN32_HDC_POINTER                           "SDL.window.win32.hdc"
#define SDL_PROP_WINDOW_WIN32_INSTANCE_POINTER                      "SDL.window.win32.instance"
#define SDL_PROP_WINDOW_WAYLAND_DISPLAY_POINTER                     "SDL.window.wayland.display"
#define SDL_PROP_WINDOW_WAYLAND_SURFACE_POINTER                     "SDL.window.wayland.surface"
#define SDL_PROP_WINDOW_WAYLAND_EGL_WINDOW_POINTER                  "SDL.window.wayland.egl_window"
#define SDL_PROP_WINDOW_WAYLAND_XDG_SURFACE_POINTER                 "SDL.window.wayland.xdg_surface"
#define SDL_PROP_WINDOW_WAYLAND_XDG_TOPLEVEL_POINTER                "SDL.window.wayland.xdg_toplevel"
#define SDL_PROP_WINDOW_WAYLAND_XDG_TOPLEVEL_EXPORT_HANDLE_STRING   "SDL.window.wayland.xdg_toplevel_export_handle"
#define SDL_PROP_WINDOW_WAYLAND_XDG_POPUP_POINTER                   "SDL.window.wayland.xdg_popup"
#define SDL_PROP_WINDOW_WAYLAND_XDG_POSITIONER_POINTER              "SDL.window.wayland.xdg_positioner"
#define SDL_PROP_WINDOW_X11_DISPLAY_POINTER                         "SDL.window.x11.display"
#define SDL_PROP_WINDOW_X11_SCREEN_NUMBER                           "SDL.window.x11.screen"
#define SDL_PROP_WINDOW_X11_WINDOW_NUMBER                           "SDL.window.x11.window"
extern  SDL_WindowFlags  SDL_GetWindowFlags(SDL_Window *window);
extern  bool  SDL_SetWindowTitle(SDL_Window *window, const char *title);
extern  const char *  SDL_GetWindowTitle(SDL_Window *window);
extern  bool  SDL_SetWindowIcon(SDL_Window *window, SDL_Surface *icon);
extern  bool  SDL_SetWindowPosition(SDL_Window *window, int x, int y);
extern  bool  SDL_GetWindowPosition(SDL_Window *window, int *x, int *y);
extern  bool  SDL_SetWindowSize(SDL_Window *window, int w, int h);
extern  bool  SDL_GetWindowSize(SDL_Window *window, int *w, int *h);
extern  bool  SDL_GetWindowSafeArea(SDL_Window *window, SDL_Rect *rect);
extern  bool  SDL_SetWindowAspectRatio(SDL_Window *window, float min_aspect, float max_aspect);
extern  bool  SDL_GetWindowAspectRatio(SDL_Window *window, float *min_aspect, float *max_aspect);
extern  bool  SDL_GetWindowBordersSize(SDL_Window *window, int *top, int *left, int *bottom, int *right);
extern  bool  SDL_GetWindowSizeInPixels(SDL_Window *window, int *w, int *h);
extern  bool  SDL_SetWindowMinimumSize(SDL_Window *window, int min_w, int min_h);
extern  bool  SDL_GetWindowMinimumSize(SDL_Window *window, int *w, int *h);
extern  bool  SDL_SetWindowMaximumSize(SDL_Window *window, int max_w, int max_h);
extern  bool  SDL_GetWindowMaximumSize(SDL_Window *window, int *w, int *h);
extern  bool  SDL_SetWindowBordered(SDL_Window *window, bool bordered);
extern  bool  SDL_SetWindowResizable(SDL_Window *window, bool resizable);
extern  bool  SDL_SetWindowAlwaysOnTop(SDL_Window *window, bool on_top);
extern  bool  SDL_ShowWindow(SDL_Window *window);
extern  bool  SDL_HideWindow(SDL_Window *window);
extern  bool  SDL_RaiseWindow(SDL_Window *window);
extern  bool  SDL_MaximizeWindow(SDL_Window *window);
extern  bool  SDL_MinimizeWindow(SDL_Window *window);
extern  bool  SDL_RestoreWindow(SDL_Window *window);
extern  bool  SDL_SetWindowFullscreen(SDL_Window *window, bool fullscreen);
extern  bool  SDL_SyncWindow(SDL_Window *window);
extern  bool  SDL_WindowHasSurface(SDL_Window *window);
extern  SDL_Surface *  SDL_GetWindowSurface(SDL_Window *window);
extern  bool  SDL_SetWindowSurfaceVSync(SDL_Window *window, int vsync);
#define SDL_WINDOW_SURFACE_VSYNC_DISABLED 0
#define SDL_WINDOW_SURFACE_VSYNC_ADAPTIVE (-1)
extern  bool  SDL_GetWindowSurfaceVSync(SDL_Window *window, int *vsync);
extern  bool  SDL_UpdateWindowSurface(SDL_Window *window);
extern  bool  SDL_UpdateWindowSurfaceRects(SDL_Window *window, const SDL_Rect *rects, int numrects);
extern  bool  SDL_DestroyWindowSurface(SDL_Window *window);
extern  bool  SDL_SetWindowKeyboardGrab(SDL_Window *window, bool grabbed);
extern  bool  SDL_SetWindowMouseGrab(SDL_Window *window, bool grabbed);
extern  bool  SDL_GetWindowKeyboardGrab(SDL_Window *window);
extern  bool  SDL_GetWindowMouseGrab(SDL_Window *window);
extern  SDL_Window *  SDL_GetGrabbedWindow(void);
extern  bool  SDL_SetWindowMouseRect(SDL_Window *window, const SDL_Rect *rect);
extern  const SDL_Rect *  SDL_GetWindowMouseRect(SDL_Window *window);
extern  bool  SDL_SetWindowOpacity(SDL_Window *window, float opacity);
extern  float  SDL_GetWindowOpacity(SDL_Window *window);
extern  bool  SDL_SetWindowParent(SDL_Window *window, SDL_Window *parent);
extern  bool  SDL_SetWindowModal(SDL_Window *window, bool modal);
extern  bool  SDL_SetWindowFocusable(SDL_Window *window, bool focusable);
extern  bool  SDL_ShowWindowSystemMenu(SDL_Window *window, int x, int y);
typedef enum SDL_HitTestResult
{
    SDL_HITTEST_NORMAL,             
    SDL_HITTEST_DRAGGABLE,          
    SDL_HITTEST_RESIZE_TOPLEFT,     
    SDL_HITTEST_RESIZE_TOP,         
    SDL_HITTEST_RESIZE_TOPRIGHT,    
    SDL_HITTEST_RESIZE_RIGHT,       
    SDL_HITTEST_RESIZE_BOTTOMRIGHT, 
    SDL_HITTEST_RESIZE_BOTTOM,      
    SDL_HITTEST_RESIZE_BOTTOMLEFT,  
    SDL_HITTEST_RESIZE_LEFT         
} SDL_HitTestResult;
typedef SDL_HitTestResult ( *SDL_HitTest)(SDL_Window *win,
                                                 const SDL_Point *area,
                                                 void *data);
extern  bool  SDL_SetWindowHitTest(SDL_Window *window, SDL_HitTest callback, void *callback_data);
extern  bool  SDL_SetWindowShape(SDL_Window *window, SDL_Surface *shape);
extern  bool  SDL_FlashWindow(SDL_Window *window, SDL_FlashOperation operation);
extern  void  SDL_DestroyWindow(SDL_Window *window);
extern  bool  SDL_ScreenSaverEnabled(void);
extern  bool  SDL_EnableScreenSaver(void);
extern  bool  SDL_DisableScreenSaver(void);
extern  bool  SDL_GL_LoadLibrary(const char *path);
extern  SDL_FunctionPointer  SDL_GL_GetProcAddress(const char *proc);
extern  SDL_FunctionPointer  SDL_EGL_GetProcAddress(const char *proc);
extern  void  SDL_GL_UnloadLibrary(void);
extern  bool  SDL_GL_ExtensionSupported(const char *extension);
extern  void  SDL_GL_ResetAttributes(void);
extern  bool  SDL_GL_SetAttribute(SDL_GLattr attr, int value);
extern  bool  SDL_GL_GetAttribute(SDL_GLattr attr, int *value);
extern  SDL_GLContext  SDL_GL_CreateContext(SDL_Window *window);
extern  bool  SDL_GL_MakeCurrent(SDL_Window *window, SDL_GLContext context);
extern  SDL_Window *  SDL_GL_GetCurrentWindow(void);
extern  SDL_GLContext  SDL_GL_GetCurrentContext(void);
extern  SDL_EGLDisplay  SDL_EGL_GetCurrentDisplay(void);
extern  SDL_EGLConfig  SDL_EGL_GetCurrentConfig(void);
extern  SDL_EGLSurface  SDL_EGL_GetWindowSurface(SDL_Window *window);
extern  void  SDL_EGL_SetAttributeCallbacks(SDL_EGLAttribArrayCallback platformAttribCallback,
                                                               SDL_EGLIntArrayCallback surfaceAttribCallback,
                                                               SDL_EGLIntArrayCallback contextAttribCallback, void *userdata);
extern  bool  SDL_GL_SetSwapInterval(int interval);
extern  bool  SDL_GL_GetSwapInterval(int *interval);
extern  bool  SDL_GL_SwapWindow(SDL_Window *window);