Package_Tools/pas_units/SDL_video.pas


const
  SDL_PROP_WINDOW_SHAPE_POINTER = 'SDL.window.shape';
  SDL_PROP_WINDOW_HDR_ENABLED_BOOLEAN = 'SDL.window.HDR_enabled';
  SDL_PROP_WINDOW_SDR_WHITE_LEVEL_FLOAT = 'SDL.window.SDR_white_level';
  SDL_PROP_WINDOW_HDR_HEADROOM_FLOAT = 'SDL.window.HDR_headroom';
  SDL_PROP_WINDOW_ANDROID_WINDOW_POINTER = 'SDL.window.android.window';
  SDL_PROP_WINDOW_ANDROID_SURFACE_POINTER = 'SDL.window.android.surface';
  SDL_PROP_WINDOW_UIKIT_WINDOW_POINTER = 'SDL.window.uikit.window';
  SDL_PROP_WINDOW_UIKIT_METAL_VIEW_TAG_NUMBER = 'SDL.window.uikit.metal_view_tag';
  SDL_PROP_WINDOW_UIKIT_OPENGL_FRAMEBUFFER_NUMBER = 'SDL.window.uikit.opengl.framebuffer';
  SDL_PROP_WINDOW_UIKIT_OPENGL_RENDERBUFFER_NUMBER = 'SDL.window.uikit.opengl.renderbuffer';
  SDL_PROP_WINDOW_UIKIT_OPENGL_RESOLVE_FRAMEBUFFER_NUMBER = 'SDL.window.uikit.opengl.resolve_framebuffer';
  SDL_PROP_WINDOW_KMSDRM_DEVICE_INDEX_NUMBER = 'SDL.window.kmsdrm.dev_index';
  SDL_PROP_WINDOW_KMSDRM_DRM_FD_NUMBER = 'SDL.window.kmsdrm.drm_fd';
  SDL_PROP_WINDOW_KMSDRM_GBM_DEVICE_POINTER = 'SDL.window.kmsdrm.gbm_dev';
  SDL_PROP_WINDOW_COCOA_WINDOW_POINTER = 'SDL.window.cocoa.window';
  SDL_PROP_WINDOW_COCOA_METAL_VIEW_TAG_NUMBER = 'SDL.window.cocoa.metal_view_tag';
  SDL_PROP_WINDOW_VIVANTE_DISPLAY_POINTER = 'SDL.window.vivante.display';
  SDL_PROP_WINDOW_VIVANTE_WINDOW_POINTER = 'SDL.window.vivante.window';
  SDL_PROP_WINDOW_VIVANTE_SURFACE_POINTER = 'SDL.window.vivante.surface';
  SDL_PROP_WINDOW_WIN32_HWND_POINTER = 'SDL.window.win32.hwnd';
  SDL_PROP_WINDOW_WIN32_HDC_POINTER = 'SDL.window.win32.hdc';
  SDL_PROP_WINDOW_WIN32_INSTANCE_POINTER = 'SDL.window.win32.instance';
  SDL_PROP_WINDOW_WAYLAND_DISPLAY_POINTER = 'SDL.window.wayland.display';
  SDL_PROP_WINDOW_WAYLAND_SURFACE_POINTER = 'SDL.window.wayland.surface';
  SDL_PROP_WINDOW_WAYLAND_EGL_WINDOW_POINTER = 'SDL.window.wayland.egl_window';
  SDL_PROP_WINDOW_WAYLAND_XDG_SURFACE_POINTER = 'SDL.window.wayland.xdg_surface';
  SDL_PROP_WINDOW_WAYLAND_XDG_TOPLEVEL_POINTER = 'SDL.window.wayland.xdg_toplevel';
  SDL_PROP_WINDOW_WAYLAND_XDG_TOPLEVEL_EXPORT_HANDLE_STRING = 'SDL.window.wayland.xdg_toplevel_export_handle';
  SDL_PROP_WINDOW_WAYLAND_XDG_POPUP_POINTER = 'SDL.window.wayland.xdg_popup';
  SDL_PROP_WINDOW_WAYLAND_XDG_POSITIONER_POINTER = 'SDL.window.wayland.xdg_positioner';
  SDL_PROP_WINDOW_X11_DISPLAY_POINTER = 'SDL.window.x11.display';
  SDL_PROP_WINDOW_X11_SCREEN_NUMBER = 'SDL.window.x11.screen';
  SDL_PROP_WINDOW_X11_WINDOW_NUMBER = 'SDL.window.x11.window';

function SDL_GetWindowFlags(window: PSDL_Window): TSDL_WindowFlags; cdecl; external libSDL3;
function SDL_SetWindowTitle(window: PSDL_Window; title: pansichar): Tbool; cdecl; external libSDL3;
function SDL_GetWindowTitle(window: PSDL_Window): pansichar; cdecl; external libSDL3;
function SDL_SetWindowIcon(window: PSDL_Window; icon: PSDL_Surface): Tbool; cdecl; external libSDL3;
function SDL_SetWindowPosition(window: PSDL_Window; x: longint; y: longint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowPosition(window: PSDL_Window; x: Plongint; y: Plongint): Tbool; cdecl; external libSDL3;
function SDL_SetWindowSize(window: PSDL_Window; w: longint; h: longint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowSize(window: PSDL_Window; w: Plongint; h: Plongint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowSafeArea(window: PSDL_Window; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_SetWindowAspectRatio(window: PSDL_Window; min_aspect: single; max_aspect: single): Tbool; cdecl; external libSDL3;
function SDL_GetWindowAspectRatio(window: PSDL_Window; min_aspect: Psingle; max_aspect: Psingle): Tbool; cdecl; external libSDL3;
function SDL_GetWindowBordersSize(window: PSDL_Window; top: Plongint; left: Plongint; bottom: Plongint; right: Plongint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowSizeInPixels(window: PSDL_Window; w: Plongint; h: Plongint): Tbool; cdecl; external libSDL3;
function SDL_SetWindowMinimumSize(window: PSDL_Window; min_w: longint; min_h: longint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowMinimumSize(window: PSDL_Window; w: Plongint; h: Plongint): Tbool; cdecl; external libSDL3;
function SDL_SetWindowMaximumSize(window: PSDL_Window; max_w: longint; max_h: longint): Tbool; cdecl; external libSDL3;
function SDL_GetWindowMaximumSize(window: PSDL_Window; w: Plongint; h: Plongint): Tbool; cdecl; external libSDL3;
function SDL_SetWindowBordered(window: PSDL_Window; bordered: Tbool): Tbool; cdecl; external libSDL3;
function SDL_SetWindowResizable(window: PSDL_Window; resizable: Tbool): Tbool; cdecl; external libSDL3;
function SDL_SetWindowAlwaysOnTop(window: PSDL_Window; on_top: Tbool): Tbool; cdecl; external libSDL3;
function SDL_ShowWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_HideWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_RaiseWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_MaximizeWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_MinimizeWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_RestoreWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_SetWindowFullscreen(window: PSDL_Window; fullscreen: Tbool): Tbool; cdecl; external libSDL3;
function SDL_SyncWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_WindowHasSurface(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_GetWindowSurface(window: PSDL_Window): PSDL_Surface; cdecl; external libSDL3;
function SDL_SetWindowSurfaceVSync(window: PSDL_Window; vsync: longint): Tbool; cdecl; external libSDL3;

const
  SDL_WINDOW_SURFACE_VSYNC_DISABLED = 0;
  SDL_WINDOW_SURFACE_VSYNC_ADAPTIVE = -(1);

function SDL_GetWindowSurfaceVSync(window: PSDL_Window; vsync: Plongint): Tbool; cdecl; external libSDL3;
function SDL_UpdateWindowSurface(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_UpdateWindowSurfaceRects(window: PSDL_Window; rects: PSDL_Rect; numrects: longint): Tbool; cdecl; external libSDL3;
function SDL_DestroyWindowSurface(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_SetWindowKeyboardGrab(window: PSDL_Window; grabbed: Tbool): Tbool; cdecl; external libSDL3;
function SDL_SetWindowMouseGrab(window: PSDL_Window; grabbed: Tbool): Tbool; cdecl; external libSDL3;
function SDL_GetWindowKeyboardGrab(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_GetWindowMouseGrab(window: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_GetGrabbedWindow: PSDL_Window; cdecl; external libSDL3;
function SDL_SetWindowMouseRect(window: PSDL_Window; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_GetWindowMouseRect(window: PSDL_Window): PSDL_Rect; cdecl; external libSDL3;
function SDL_SetWindowOpacity(window: PSDL_Window; opacity: single): Tbool; cdecl; external libSDL3;
function SDL_GetWindowOpacity(window: PSDL_Window): single; cdecl; external libSDL3;
function SDL_SetWindowParent(window: PSDL_Window; parent: PSDL_Window): Tbool; cdecl; external libSDL3;
function SDL_SetWindowModal(window: PSDL_Window; modal: Tbool): Tbool; cdecl; external libSDL3;
function SDL_SetWindowFocusable(window: PSDL_Window; focusable: Tbool): Tbool; cdecl; external libSDL3;
function SDL_ShowWindowSystemMenu(window: PSDL_Window; x: longint; y: longint): Tbool; cdecl; external libSDL3;

type
  PSDL_HitTestResult = ^TSDL_HitTestResult;
  TSDL_HitTestResult = longint;

const
  SDL_HITTEST_NORMAL = 0;
  SDL_HITTEST_DRAGGABLE = 1;
  SDL_HITTEST_RESIZE_TOPLEFT = 2;
  SDL_HITTEST_RESIZE_TOP = 3;
  SDL_HITTEST_RESIZE_TOPRIGHT = 4;
  SDL_HITTEST_RESIZE_RIGHT = 5;
  SDL_HITTEST_RESIZE_BOTTOMRIGHT = 6;
  SDL_HITTEST_RESIZE_BOTTOM = 7;
  SDL_HITTEST_RESIZE_BOTTOMLEFT = 8;
  SDL_HITTEST_RESIZE_LEFT = 9;

type
  TSDL_HitTest = function(win: PSDL_Window; area: PSDL_Point; Data: pointer): TSDL_HitTestResult; cdecl;

function SDL_SetWindowHitTest(window: PSDL_Window; callback: TSDL_HitTest; callback_data: pointer): Tbool; cdecl; external libSDL3;
function SDL_SetWindowShape(window: PSDL_Window; shape: PSDL_Surface): Tbool; cdecl; external libSDL3;
function SDL_FlashWindow(window: PSDL_Window; operation: TSDL_FlashOperation): Tbool; cdecl; external libSDL3;
procedure SDL_DestroyWindow(window: PSDL_Window); cdecl; external libSDL3;
function SDL_ScreenSaverEnabled: Tbool; cdecl; external libSDL3;
function SDL_EnableScreenSaver: Tbool; cdecl; external libSDL3;
function SDL_DisableScreenSaver: Tbool; cdecl; external libSDL3;
function SDL_GL_LoadLibrary(path: pansichar): Tbool; cdecl; external libSDL3;
function SDL_GL_GetProcAddress(proc: pansichar): TSDL_FunctionPointer; cdecl; external libSDL3;
function SDL_EGL_GetProcAddress(proc: pansichar): TSDL_FunctionPointer; cdecl; external libSDL3;
procedure SDL_GL_UnloadLibrary; cdecl; external libSDL3;
function SDL_GL_ExtensionSupported(extension: pansichar): Tbool; cdecl; external libSDL3;
procedure SDL_GL_ResetAttributes; cdecl; external libSDL3;
function SDL_GL_SetAttribute(attr: TSDL_GLattr; Value: longint): Tbool; cdecl; external libSDL3;
function SDL_GL_GetAttribute(attr: TSDL_GLattr; Value: Plongint): Tbool; cdecl; external libSDL3;
function SDL_GL_CreateContext(window: PSDL_Window): TSDL_GLContext; cdecl; external libSDL3;
function SDL_GL_MakeCurrent(window: PSDL_Window; context: TSDL_GLContext): Tbool; cdecl; external libSDL3;
function SDL_GL_GetCurrentWindow: PSDL_Window; cdecl; external libSDL3;
function SDL_GL_GetCurrentContext: TSDL_GLContext; cdecl; external libSDL3;
function SDL_EGL_GetCurrentDisplay: TSDL_EGLDisplay; cdecl; external libSDL3;
function SDL_EGL_GetCurrentConfig: TSDL_EGLConfig; cdecl; external libSDL3;
function SDL_EGL_GetWindowSurface(window: PSDL_Window): TSDL_EGLSurface; cdecl; external libSDL3;
procedure SDL_EGL_SetAttributeCallbacks(platformAttribCallback: TSDL_EGLAttribArrayCallback; surfaceAttribCallback: TSDL_EGLIntArrayCallback; contextAttribCallback: TSDL_EGLIntArrayCallback; userdata: pointer); cdecl; external libSDL3;
function SDL_GL_SetSwapInterval(interval: longint): Tbool; cdecl; external libSDL3;
function SDL_GL_GetSwapInterval(interval: Plongint): Tbool; cdecl; external libSDL3;
function SDL_GL_SwapWindow(window: PSDL_Window): Tbool; cdecl; external libSDL3;

function SDL_WINDOWPOS_UNDEFINED_DISPLAY(X: longint): longint;
function SDL_WINDOWPOS_UNDEFINED: longint;
function SDL_WINDOWPOS_ISUNDEFINED(X: longint): boolean;
function SDL_WINDOWPOS_CENTERED_DISPLAY(X: longint): longint;
function SDL_WINDOWPOS_CENTERED: longint;
function SDL_WINDOWPOS_ISCENTERED(X: longint): boolean;

implementation

function SDL_WINDOWPOS_UNDEFINED_DISPLAY(X: longint): longint;
begin
  SDL_WINDOWPOS_UNDEFINED_DISPLAY := SDL_WINDOWPOS_UNDEFINED_MASK or X;
end;

function SDL_WINDOWPOS_UNDEFINED: longint;
begin
  SDL_WINDOWPOS_UNDEFINED := SDL_WINDOWPOS_UNDEFINED_DISPLAY(0);
end;

function SDL_WINDOWPOS_ISUNDEFINED(X: longint): boolean;
begin
  SDL_WINDOWPOS_ISUNDEFINED := (X and $FFFF0000) = SDL_WINDOWPOS_UNDEFINED_MASK;
end;

function SDL_WINDOWPOS_CENTERED_DISPLAY(X: longint): longint;
begin
  SDL_WINDOWPOS_CENTERED_DISPLAY := SDL_WINDOWPOS_CENTERED_MASK or X;
end;

function SDL_WINDOWPOS_CENTERED: longint;
begin
  SDL_WINDOWPOS_CENTERED := SDL_WINDOWPOS_CENTERED_DISPLAY(0);
end;

function SDL_WINDOWPOS_ISCENTERED(X: longint): boolean;
begin
  SDL_WINDOWPOS_ISCENTERED := (X and $FFFF0000) = SDL_WINDOWPOS_CENTERED_MASK;
end;


end.
